# lambila

./: .gitignore  CMakeLists.txt  Design.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Project.cpp  Project.h  README.md  VhdlParser.cpp  VhdlParser.h  main.cpp  resources.qrc
doc/: vhdl93_ebnf.txt
resources/: resources.qrc
src/: Design.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  Project.cpp  Project.h  VhdlParser.cpp  VhdlParser.h  main.cpp
ui/: MainWindow.ui
